[package]
name = "backend"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.38"
features = "0.10.0"

# JSON libs
serde = "1.0.152"
serde_json = "1.0.93"
serde_derive = "1.0.152"

# Web libs
wrap = "0.1.0"

#DB Libs
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
sqlb = "0.0.8"
